update file paths

--- a/Pearson_Analysis.ipynb
+++ b/Pearson_Analysis.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestep_data = pd.read_csv('SOM_example_data.csv', index_col = False)\n",
-    "node_data = pd.read_csv('example_nodes.csv', index_col = False)\n",
+    "timestep_data = pd.read_csv('example_data/SOM_example_data.csv', index_col = False)\n",
+    "node_data = pd.read_csv('example_data/example_nodes.csv', index_col = False)\n",
     "node_data = node_data[node_data.columns[1:]].to_numpy()\n",
-    "node_assignments = pd.read_csv(\"example_node_assignments.csv\")['x'].to_numpy()"
+    "node_assignments = pd.read_csv(\"example_data/example_node_assignments.csv\")['x'].to_numpy()"
    ]
   },
   {
@@ -53,12 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "#grab the correct latitudes from the .nc file\n",
-    "spatial_file = xr.open_mfdataset('SOM_example_data.nc4')\n",
+    "spatial_file = xr.open_mfdataset('example_data/SOM_example_data.nc4')\n",
     "lats = np.array(spatial_file.lat)"
    ]
   },
